# neurocanvas-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
static/: index.html  script.js  style.css
