[package]
name = "neurocanvas_backend" # Bu isim, binary adını belirler, kontrol edin
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4"
actix-files = "0.6"
actix-web-actors = "4"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
actix-cors = "0.6"
num_cpus = "1.13"
 reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
dotenv = "0.15"